# cmake_template

./: CMakeLists.txt  LICENSE  readme.md
cmake/: 3rdparty.cmake  canopenlinux.cmake  iniparser.cmake
